--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 <meta name="robots" content="noindex, nofollow">
 
 <!--<base href="http://www.themainplacethriftstore.com/">--><base href=".">
-<link rel="canonical" href="http://www.themainplacethriftstore.com/about.html">
+<link rel="canonical" href="mainplacethriftgit.github.io/index/about.html">
 
 <link rel="stylesheet" type="text/css" href="http://www.themainplacethriftstore.com/style_imagehover.css">
 <link rel="stylesheet" type="text/css" href="http://www.themainplacethriftstore.com/stylesheet.css">
@@ -115,11 +115,11 @@
 <h3 class="leftBoxHeading" id="informationHeading">Information</h3>
 <div id="informationContent" class="sideBoxContent">
 <ul style="margin: 0; padding: 0; list-style-type: none;">
-<li><div class="betterInformation"><a href="http://www.themainplacethriftstore.com/about.html">About Us</a></div></li>
-<li><div class="betterInformation"><a href="http://www.themainplacethriftstore.com/shipping.html">Shipping &amp; Returns</a></div></li>
-<li><div class="betterInformation"><a href="http://www.themainplacethriftstore.com/privacy.html">Privacy Notice</a></div></li>
-<li><div class="betterInformation"><a href="http://www.themainplacethriftstore.com/conditions.html">Conditions of Use</a></div></li>
-<li><div class="betterInformation"><a href="http://www.themainplacethriftstore.com/contact.html">Contact Us</a></div></li>
+<li><div class="betterInformation"><a href="http://mainplacethriftgit.github.io/index/about.html">About Us</a></div></li>
+<li><div class="betterInformation"><a href=http://mainplacethriftgit.github.io/index/shipping.html">Shipping &amp; Returns</a></div></li>
+<li><div class="betterInformation"><a href="http://mainplacethriftgit.github.io/index/privacy.html">Privacy Notice</a></div></li>
+<li><div class="betterInformation"><a href="http://mainplacethriftgit.github.io/index/conditions.html">Conditions of Use</a></div></li>
+<li><div class="betterInformation"><a href="http://mainplacethriftgit.github.io/index/contact.html">Contact Us</a></div></li>
 </div></div>
 <!--// eof: information //-->
 
