--- a/privacy.html
+++ b/privacy.html
@@ -144,11 +144,26 @@
 <div class="centerColumn" id="contactUsDefault" style="margin-left:10px;">
 
    <div id="tagline" style="float:left;display:block;">Call Today: (714) 573-7503</div><br>
-<div><address><br>
-  The Main Place Thrift Store<br>
- 1631 El Camino Real STE #A<br>
- Tustin, CA 92780<br>
- (714) 573-7503</address>
+<div><br><h1>Welcome to The Main Place Christian Thrift Store</h1>
+<h2>Are you looking for secondhand items, furniture, electronics, clothes, dressers, books, music and much more at a price you cant beat? Then this is the place you want to be! We are located at 1631 El Camino Real, STE A, Tustin, CA 92780! We are also open from 9:00am to 8:00pm Mon-Sat.
+Welcome to the main place Christian thrift store located in Tustin! Are you looking for any of the following items or just planning to browse cheap items at a great discount price! Well you have come to the right place! We are a nonprofit organization that supports local families and underprivileged individuals in our community. We currently are accepting all type of donations at our location! Help make a difference or community by helping with our community ministries.</h2>
+<ul><li>
+Furniture
+	<li>Coaches</li>
+<li>Clothes</li>
+<li>Books</li>
+<li>Kitchen Appliances</li>
+<li>Garden Supplys</li>
+<li>Sports Equipment</li>
+<li>Kitchen Items</li>
+<li>Childrens Book & Toys</li>
+<li>Leather</li>
+<li>Collectables</li>
+<li>Vintage</li>
+<li>Antiques</li>
+<li>Music</li>
+<li>Overstock Items</li>
+		</ul>
 
  <ul>
                         <li style="float:left;display:inline-block;"><a href="https://www.facebook.com/TheMainPlaceChristianThriftStore" target="_blank"><img src="http://www.themainplacethriftstore.com/facebook.png" alt="facebook link" class="h-sm">Facebook</a></li>
