--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 <h3 class="leftBoxHeading" id="informationHeading">Information</h3>
 <div id="informationContent" class="sideBoxContent">
 <ul style="margin: 0; padding: 0; list-style-type: none;">
-<li><div class="betterInformation"><a href="/about.html">About Us</a></div></li>
-<li><div class="betterInformation"><a href="/shipping.html">Shipping &amp; Returns</a></div></li>
-<li><div class="betterInformation"><a href="/privacy.html">Privacy Notice</a></div></li>
-<li><div class="betterInformation"><a href="/conditions.html">Conditions of Use</a></div></li>
-<li><div class="betterInformation"><a href="/contact.html">Contact Us</a></div></li>
+<li><div class="betterInformation"><a href="http://mainplacethriftgit.github.io/index/about.html">About Us</a></div></li>
+<li><div class="betterInformation"><a href="http://mainplacethriftgit.github.io/index/shipping.html">Shipping &amp; Returns</a></div></li>
+<li><div class="betterInformation"><a href="http://mainplacethriftgit.github.io/index/privacy.html">Privacy Notice</a></div></li>
+<li><div class="betterInformation"><a href="http://mainplacethriftgit.github.io/index/conditions.html">Conditions of Use</a></div></li>
+<li><div class="betterInformation"><a href="http://mainplacethriftgit.github.io/index/contact.html">Contact Us</a></div></li>
 </div></div>
 <!--// eof: information //-->
 
