--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
 <div id="informationContent" class="sideBoxContent">
 <ul style="margin: 0; padding: 0; list-style-type: none;">
 <li><div class="betterInformation"><a href="http://mainplacethriftgit.github.io/index/about.html">About Us</a></div></li>
-<li><div class="betterInformation"><a href=http://mainplacethriftgit.github.io/index/shipping.html">Shipping &amp; Returns</a></div></li>
+<li><div class="betterInformation"><a href="http://mainplacethriftgit.github.io/index/shipping.html">Shipping &amp; Returns</a></div></li>
 <li><div class="betterInformation"><a href="http://mainplacethriftgit.github.io/index/privacy.html">Privacy Notice</a></div></li>
 <li><div class="betterInformation"><a href="http://mainplacethriftgit.github.io/index/conditions.html">Conditions of Use</a></div></li>
 <li><div class="betterInformation"><a href="http://mainplacethriftgit.github.io/index/contact.html">Contact Us</a></div></li>
