--- a/about.html
+++ b/about.html
@@ -144,11 +144,22 @@
 <div class="centerColumn" id="contactUsDefault" style="margin-left:10px;">
 
    <div id="tagline" style="float:left;display:block;">Call Today: (714) 573-7503</div><br>
-<div><address><br>
-  The Main Place Thrift Store<br>
- 1631 El Camino Real STE #A<br>
- Tustin, CA 92780<br>
- (714) 573-7503</address>
+	<div><br><h1>About Us</h1>
+		<span><p>UNIQUE because - It's Christian Thrift Store Not Like Any Before!</p></span>
+
+<span><p>From the music to the employees, the gospel story is presented.</p></span>
+
+<span><p>UNIQUE because - It's a ministry! Designed to help those that need help. A place to work for the physically challenged and court referred.</p></span>
+
+<span><p>UNIQUE because - It's non-profit! All proceeds go to support chronic alcohol & drug abusers</p></span>
+
+<span><p>UNIQUE because - It's free!</p></span>
+
+<span><p>Vouchers are available for those that are unable to pay.</p></span>
+
+<span><p>NEW & USED DISTRESS MERCHANIDSE</p></span>
+
+<span><p>SOLD AS IS - NO RETURNS</p></span>
 
  <ul>
                         <li style="float:left;display:inline-block;"><a href="https://www.facebook.com/TheMainPlaceChristianThriftStore" target="_blank"><img src="http://www.themainplacethriftstore.com/facebook.png" alt="facebook link" class="h-sm">Facebook</a></li>
