--- a/privacy.html
+++ b/privacy.html
@@ -143,27 +143,38 @@
 
 <div class="centerColumn" id="contactUsDefault" style="margin-left:10px;">
 
-   <div id="tagline" style="float:left;display:block;">Call Today: (714) 573-7503</div><br>
-<div><br><h1>Welcome to The Main Place Christian Thrift Store</h1>
-<h2>Are you looking for secondhand items, furniture, electronics, clothes, dressers, books, music and much more at a price you cant beat? Then this is the place you want to be! We are located at 1631 El Camino Real, STE A, Tustin, CA 92780! We are also open from 9:00am to 8:00pm Mon-Sat.
-Welcome to the main place Christian thrift store located in Tustin! Are you looking for any of the following items or just planning to browse cheap items at a great discount price! Well you have come to the right place! We are a nonprofit organization that supports local families and underprivileged individuals in our community. We currently are accepting all type of donations at our location! Help make a difference or community by helping with our community ministries.</h2>
-<ul><li>
-Furniture
-	<li>Coaches</li>
-<li>Clothes</li>
-<li>Books</li>
-<li>Kitchen Appliances</li>
-<li>Garden Supplys</li>
-<li>Sports Equipment</li>
-<li>Kitchen Items</li>
-<li>Childrens Book & Toys</li>
-<li>Leather</li>
-<li>Collectables</li>
-<li>Vintage</li>
-<li>Antiques</li>
-<li>Music</li>
-<li>Overstock Items</li>
-		</ul>
+	<h1>Privacy Notice</h1>
+	<h1>Privacy Policy: </h1>
+
+<p>At “THEMAINPLACETHRIFTSTORE.COM”, your privacy is our priority. We are committed to protecting your privacy at all times, in all situations. The information we collect about you when you become a member is used to process your orders and to provide a more personalized experience on our site. Our site uses a 128 bit encrypted SSL to increase the security of our customer’s information. However, we “THE MAIN PLACE CHRISTIAN FELLOWSHIP” do not guarantee complete security on stored information, however, we have installed and applied our encrypted pages and installed our SSL certificate to prevent stolen information. 
+
+How Do We Use the Information We Collect? When you become an “THEMAINPLACETHRIFTSTORE.COM” member, we ask you to fill out a form that requests your name, address and e-mail address as well as some demographic information such as gender and date of birth. “THEMAINPLACETHRIFTSTORE.COM” will NOT share data with trusted partners to help us perform statistical analysis. Your name and address information is used solely to process orders unless your prior consent is given. Without your consent, this information will NEVER be sold, given, rented or traded to others for purposes other than order fulfillment. Your demographic information (gender, date of birth, etc.) will be used for several security purposes, to ensure you are who you say you are and in fact you are paying with your credit cards and not someone using your stolen credit cards. 
+
+Refer-A-Friend If you choose to use our referral service to tell a friend about our site, we will ask you for your friend's name and email address. We will automatically send your friend a one-time email inviting him or her to visit the site. “THEMAINPLACETHRIFTSTORE.COM” does not store this information and uses it for the sole purpose of sending this one-time email. 
+
+Our Use of Log Files When you visit our site we automatically log your IP address, your browser type and your access times. We utilize this information to conduct site performance evaluations, to see where visitors are coming from and to keep track of click stream data (the screens our users visit on our site). This data helps us to determine what content our members find most appealing so that we can maximize your enjoyment of the site. Log files are not tied to personally identifiable information. 
+
+Site Security All “THEMAINPLACETHRIFTSTORE.COM” employees take your personal information very seriously. All employees must learn and obey our security policies. Access to member personal information is limited to key management personnel and our member services department. The information is ID and password protected and our Web security is reviewed on a monthly basis. We have also installed and implied our site with a 128 bit encryption SSL. 
+
+Correcting/Updating Your Personal Information After becoming an “THEMAINPLACETHRIFTSTORE.COM” subscriber you may correct/update your personal information by clicking on the 'My Account' link at the top of any page, entering your ID, password and birth date when prompted and clicking the Edit Information button. The changes you make will be reflected in our databases instantly. If you wish to deactivate your account, you may contact our member services group through the 'My Account' section, or the 'Contact Us' section. 
+
+Links To Other Sites This Web site contains links to other Web sites. Please note that when you click on one of these links, you may be leaving the “THEMAINPLACETHRIFTSTORE.COM” site and entering another Web site. These sites may independently collect or request information about you and we encourage you to read the privacy statements of these linked sites as their privacy policy may differ from ours. 
+
+Communication From time to time we may send out email messages alerting you that products are available, to remind you about providing feedback or for promotional offers. In addition, you will receive communication from us 1) if you contact us for a particular reason, 2) to receive your orders, or 3) we need to contact you for administrative purposes such as winning a contest. Administrative e-mails will not contain promotional materials. If you choose to receive our News Letters, they will contain promotional materials from “THEMAINPLACETHRIFTSTORE.COM”. 
+
+Legal Disclaimer Though we make every effort to preserve user privacy, we may need to disclose personal information when required by law wherein we have a good-faith belief that such action is necessary to comply with a current judicial proceeding, a court order or legal process served on our Web site 
+
+Supplementation We may correct or supplement your address information with standardized postal representation in order to ensure that your orders are delivered. We do this since we want to make sure that our members receive the order and to lower costs associated with our programs. 
+
+Contests Periodically, contests are run on our site. Sometimes contests are sponsored by our customers. To enter these contests you need only to enter your ID and password and your guess. At the time of entry, you may decide if you wish to have your first name and state posted on our site if you are the winner. Winner’s names are NEVER shared with our customers without their consent. 
+
+Our Use of Cookies Cookies are pieces of information that your browser stores on your computer's hard drive which identify you when you enter. The ability to select samples on our site is not cookie-driven. We may use session cookies to provide a seamless experience on the site and to combine with our log files so that we can understand our site traffic and analyze our demographic information in aggregate form. If you have set your browser to reject cookies, our site will not identify you when you enter and you will need to manually type in your ID and password. 
+
+Your Feedback is Always Welcome We welcome your comments and questions about our privacy policy - or anything else you might want to talk about. To contact us Click Here 
+
+You can reach us via email at “thriftstore@themainplace.com” 
+
+1631 El Camino Real STE A., Tustin, CA 92780<p>
 
  <ul>
                         <li style="float:left;display:inline-block;"><a href="https://www.facebook.com/TheMainPlaceChristianThriftStore" target="_blank"><img src="http://www.themainplacethriftstore.com/facebook.png" alt="facebook link" class="h-sm">Facebook</a></li>
