--- a/shipping.html
+++ b/shipping.html
@@ -144,11 +144,32 @@
 <div class="centerColumn" id="contactUsDefault" style="margin-left:10px;">
 
    <div id="tagline" style="float:left;display:block;">Call Today: (714) 573-7503</div><br>
-<div><address><br>
-  The Main Place Thrift Store<br>
- 1631 El Camino Real STE #A<br>
- Tustin, CA 92780<br>
- (714) 573-7503</address>
+	<div><br><h1>Shipping & Returns</h1>
+		<h1>Returns & Refunds</h1>
+		<h2>Thanks for shopping at The Main Place Thrift Store.</h2>
+<p>
+Returns
+Strict NO RETURNS Policy.
+
+Refunds
+Strict NO REFUND Policy
+
+ExchangesStrict No EXCHANGES Policy
+
+Shipping
+You will be responsible for paying for your own shipping costs for returning your item. Shipping costs are non-refundable. If you receive a refund, the cost of return shipping will be deducted from your refund.
+
+How To Return Your Item
+To return an item to us, please mail it to the following address:
+
+1631 El Camino Real STE. A, Tustin, CA 92780
+
+You can also contact us if you have any questions.
+
+Contact Us
+If you have any questions on how to return your item to us, contact us.
+
+Generated with permission from TermsFeed Generator.<p>
 
  <ul>
                         <li style="float:left;display:inline-block;"><a href="https://www.facebook.com/TheMainPlaceChristianThriftStore" target="_blank"><img src="http://www.themainplacethriftstore.com/facebook.png" alt="facebook link" class="h-sm">Facebook</a></li>
